@@ -206,8 +206,8 @@ Words: <span id=bulk_edit_words></span> &nbsp;&nbsp;&nbsp;Characters: <span id=b
   <tr class="form-head" style="border-bottom:1px solid #bababa;">
     <td width="125">Element</td>
     <td width="275">Data Entry</td>
-    <td width="85">Order</td>
-    <td width="75"><input type="checkbox" onclick="checkall(this, 'remove_')"></td>
+    <td width="85"><tmpl_unless no_reorder>Order</tmpl_unless></td>
+    <td width="75"><tmpl_unless no_reorder><input type="checkbox" onclick="checkall(this, 'remove_')"></tmpl_unless></td>
   </tr> 
 
  <tmpl_loop child_loop>
@@ -256,7 +256,7 @@ Words: <span id=bulk_edit_words></span> &nbsp;&nbsp;&nbsp;Characters: <span id=b
      </table>
    </td>
        <td align="center" class="form-cell"><tmpl_if no_reorder>&nbsp;<tmpl_else><input type="button" value="Reorder" onClick='reorder()' class="button"></tmpl_if></td>
-       <td align="center" class="form-cell"><input type="button" value="Delete" onClick='remove_children()' class="button"></td>
+       <td align="center" class="form-cell"><tmpl_unless no_delete><input type="button" value="Delete" onClick='remove_children()' class="button"></tmpl_unless></td>
    </tr>
 </table>
 <br>
